test/visibility/import/enablesUnqualified/multipleUnqualified/errorWhenBehindPrivateUse.good
errorWhenBehindPrivateUse.chpl:8: error: Bad identifier, no known 'x' defined in 'B'
